feat: add shadcdn and tailwind

--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
     "format": "bunx prettier --write ."
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.427.0",
     "nuxt": "^3.12.4",
+    "radix-vue": "^1.9.4",
+    "shadcn-nuxt": "^0.10.4",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "latest"
   },
   "lint-staged": {
@@ -24,6 +31,8 @@
     "@commitlint/cli": "^19.4.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@nuxt/eslint": "^0.5.0",
+    "@nuxtjs/color-mode": "^3.4.2",
+    "@nuxtjs/tailwindcss": "^6.12.1",
     "eslint": "^9.9.0",
     "husky": "^9.1.4",
     "lint-staged": "^15.2.9",
