--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "bunx prettier --write ."
   },
   "dependencies": {
+    "@nuxtjs/google-fonts": "^3.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.427.0",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.4.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@iconify/vue": "^4.1.2",
     "@nuxt/eslint": "^0.5.0",
     "@nuxtjs/color-mode": "^3.4.2",
     "@nuxtjs/tailwindcss": "^6.12.1",
