--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@iconify/vue": "^4.1.2",
     "@nuxt/eslint": "^0.5.0",
     "@nuxtjs/color-mode": "^3.4.2",
+    "@nuxtjs/i18n": "^8.5.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "eslint": "^9.9.0",
     "husky": "^9.1.4",
